<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/peach_puff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:tooltipText="Taschenrechner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:textSize="48sp"
        android:gravity="end"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintHeight_percent="0.30" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="5"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHeight_percent="0.60">



        <Button
            android:id="@+id/leftParenthesis"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/LeftParenthesis" />

        <Button
            android:id="@+id/rightParenthesis"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/RightParenthesis" />

        <Button
            android:id="@+id/del"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Delete" />

        <Button
            android:id="@+id/div"
            style="@style/CalculationSymbolButtons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Division" />

        <Button
            android:id="@+id/seven"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_7" />

        <Button
            android:id="@+id/eight"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_8" />


        <Button
            android:id="@+id/nine"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_9" />

        <Button
            android:id="@+id/mult"
            style="@style/CalculationSymbolButtons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Multiply" />

        <Button
            android:id="@+id/four"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_4" />

        <Button
            android:id="@+id/five"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_5" />

        <Button
            android:id="@+id/six"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_6" />

        <Button
            android:id="@+id/minus"
            style="@style/CalculationSymbolButtons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Subtraction" />

        <Button
            android:id="@+id/one"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/two"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/three"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_3" />

        <Button
            android:id="@+id/plus"
            style="@style/CalculationSymbolButtons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Addition" />

        <Button
            android:id="@+id/zero"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_0" />

        <Button
            android:id="@+id/dot"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Dot" />

        <Button
            android:id="@+id/save"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Save" />

        <Button
            android:id="@+id/equals"
            style="@style/SubmitButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Equals" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>